--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
   "dependencies": {
     "axios": "^1.6.2",
     "camelcase-keys": "^9.1.3",
+    "@discordjs/collection": "^2.0.0",
     "fs-extra": "^11.2.0",
+    "get-urls": "^12.1.0",
     "instagram_mqtt": "^1.2.3",
     "instagram-private-api": "^1.46.1",
+    "jimp": "^0.22.10",
+    "mime-types": "^2.1.35",
     "mongodb": "^6.3.0",
+    "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.64.0",
     "tough-cookie": "^4.1.3"
   },
