--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@discordjs/collection": "^2.0.0",
     "axios": "^1.6.2",
     "camelcase-keys": "^9.1.3",
-    "@discordjs/collection": "^2.0.0",
     "fs-extra": "^11.2.0",
     "get-urls": "^12.1.0",
     "instagram_mqtt": "^1.2.3",
@@ -38,6 +38,7 @@
     "mongodb": "^6.3.0",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.64.0",
+    "sharp": "^0.34.3",
     "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
